modules/security/alb.tf
/*
resource "aws_security_group" "alb" {
  provider = "aws.west"

  name   = "${var.name}.alb"
  vpc_id = "${var.vpc_id}"

  tags = {
    Name = "${var.name}.alb"
  }

  lifecycle {
    create_before_destroy = true
  }
}

resource "aws_security_group_rule" "alb_ingress_http" {
  provider = "aws.west"

  security_group_id = "${aws_security_group.alb.id}"

  type        = "ingress"
  protocol    = "tcp"
  from_port   = 80
  to_port     = 80
  cidr_blocks = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "alb_ingress_https" {
  provider = "aws.west"

  security_group_id = "${aws_security_group.alb.id}"

  type        = "ingress"
  protocol    = "tcp"
  from_port   = 443
  to_port     = 443
  cidr_blocks = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "alb_egress_all" {
  provider = "aws.west"

  security_group_id = "${aws_security_group.alb.id}"

  type        = "egress"
  from_port   = 0
  to_port     = 0
  protocol    = "-1"
  cidr_blocks = ["0.0.0.0/0"]
}
*/
